# PARCO-Computing-2026-235553

./: .gitignore  CMakeLists.txt  LICENSE  README.md
results/csv/: benchmark.csv
scripts/: compute_metrics.py  load_data.py  plot_chunk_effect.py  plot_efficiency.py  plot_schedule_comparison.py  plot_speedup.py  run_benchmark.pbs  run_benchmark.sh  valgrind_tests.sh
src/: coo.hpp  coo_to_csr.cpp  coo_to_csr.hpp  csr.hpp  main.cpp  read_mtx.cpp  read_mtx.hpp  spmv.cpp  spmv.hpp
src/utils/: vector_utils.cpp  vector_utils.hpp
